--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
         <input type="password" id="password" name="password" placeholder="Enter your password" required>
       </div>
       <button type="submit">Login</button>
-      <p class="signup-link">Don't have an account? <a href="#">Sign up</a></p>
+      <p class="signup-link">
+        Don't have an account? <a href="signup.html">Sign up</a>
+      </p>
     </form>
   </div>
   <script src="script.js"></script>
